cta section button fix color contrast

--- a/style/_boost.scss
+++ b/style/_boost.scss
@@ -14,7 +14,7 @@
     }
 
     a {
-        background: $cyan;
+        background: #1B8383;
         padding: .75rem 2rem;
         border-radius: 5rem;
         color: #fff;
