--- a/style/style.css
+++ b/style/style.css
@@ -471,7 +471,7 @@ img {
   color: #fff;
 }
 .boost a {
-  background: hsl(180deg, 66%, 49%);
+  background: #1B8383;
   padding: 0.75rem 2rem;
   border-radius: 5rem;
   color: #fff;
